# jaxued

./: .gitignore  404.html  Dockerfile  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  seed_sweep.yaml  sitemap.xml  tox.ini
craftax/: index.html
docs/: craftax.md  getting_started.md  index.md  level_sampler.md  maze.md  maze_dr.md  maze_paired.md  maze_plr.md  underspecified_env.md  wrappers.md
examples/: maze_dr.py  maze_paired.py  maze_plr.py
examples/craftax/: craftax_eval.py  craftax_ncc.py  craftax_ncc_sfl.py  craftax_ncc_sim.py  craftax_ncc_sim_zs.py  craftax_ncc_zs.py  craftax_plr.py  craftax_qre.py  craftax_qre_adam.py  craftax_sfl.py  craftax_wrappers.py  mutators.py  ncc_utils.py
examples/gymnax/: gymnax_plr.py
examples/rubiks/: rubiks_ncc.py
getting_started/: index.html
level_sampler/: index.html
maze/: index.html
maze_dr/: index.html
maze_paired/: index.html
maze_plr/: index.html
src/jaxued/: level_sampler.py  linen.py  utils.py
src/jaxued/environments/: __init__.py  underspecified_env.py
src/jaxued/environments/gymnax/: acrobot.py  cartpole.py  pendulum.py
src/jaxued/environments/maze/: __init__.py  env.py  env_editor.py  env_solved.py  level.py  renderer.py  util.py
src/jaxued/wrappers/: __init__.py  autoreplay.py  autoreset.py
sweep_configs/: dr10seeds.yaml  ncc10seeds.yaml  ncc10seeds_pvl.yaml  plr10seeds.yaml  sfl10seeds.yaml
tests/: test_examples_kinda.py
underspecified_env/: index.html
wrappers/: index.html
