[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxued"
version = "0.0.2"
license = { text = "Apache-2.0" }
authors = [
  { name="Samuel Coward", email="scoward@robots.ox.ac.uk" },
]
description = "A simple and useable UED library in Jax"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
keywords = ["machine-learning", "reinforcement-learning", "UED", "JAX"]
maintainers = [
    { name = "Samuel Coward", email = "scoward@robots.ox.ac.uk" }
]
dependencies = [
    "numpy",
    "jax",
    "flax",
    "chex",
    "gymnax",
]

[project.optional-dependencies]
examples = [
    "distrax",
    "optax",
    "orbax-checkpoint==0.5.3",
    "orbax",
    "wandb",
    "pillow",
    "imageio",
    "moviepy"
]

[project.urls]
Homepage = "https://github.com/dramacow/jaxued"
Issues = "https://github.com/dramacow/jaxued/issues"